--- a/etc/imageproxy.conf
+++ b/etc/imageproxy.conf
@@ -1,4 +1,4 @@
-# This is the upstart config I use for s.wjn.me.
+# This is the upstart config I use for https://willnorris.com/api/imageproxy/
 description "Image Proxy server"
 author "Will Norris <will@willnorris.com>"
 
@@ -6,7 +6,7 @@ start on (net-device-up)
 stop on runlevel [!2345]
 
 respawn
-exec /usr/bin/imageproxy \
+exec start-stop-daemon --start -c www-data --exec /usr/bin/imageproxy -- \
     -addr localhost:8001 \
     -log_dir /var/log/imageproxy \
     -cacheDir /var/cache/imageproxy \
