load signature key from /etc/imageproxy.key

--- a/etc/imageproxy.conf
+++ b/etc/imageproxy.conf
@@ -10,4 +10,5 @@ exec start-stop-daemon --start -c www-data --exec /usr/bin/imageproxy -- \
     -addr localhost:4593 \
     -log_dir /var/log/imageproxy \
     -cacheDir /var/cache/imageproxy \
+    -signatureKey @/etc/imageproxy.key \
     -whitelist willnorris.com,notsoserendipitous.com
