add baseURL and whitelist to upstart script

--- a/etc/imageproxy.conf
+++ b/etc/imageproxy.conf
@@ -11,4 +11,5 @@ exec start-stop-daemon --start -c www-data --exec /usr/bin/imageproxy -- \
     -log_dir /var/log/imageproxy \
     -cacheDir /var/cache/imageproxy \
     -signatureKey @/etc/imageproxy.key \
-    -whitelist willnorris.com,notsoserendipitous.com
+    -baseURL https://willnorris.com/ \
+    -whitelist willnorris.com,notsoserendipitous.com,gabenorris.com
