--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,11 @@
 language: go
 
 go:
-  - 1.3
   - 1.4
+  - 1.5
+
+env:
+  - GO15VENDOREXPERIMENT=1
 
 install:
   - mkdir -p "$GOPATH/src/willnorris.com/go"
@@ -10,4 +13,4 @@ install:
   - go get -v -t -d willnorris.com/go/imageproxy/...
 
 script:
-  - go test -v willnorris.com/go/imageproxy/...
+  - go test -v $(go list willnorris.com/go/imageproxy/... | grep -v vendor)
