deprecate cacheSize flag and remove docs
this flag was never actually doing what I thought it was in the first
place.

Also fix up a few instances of cacheDir still be used in config files

fixes #45

--- a/etc/imageproxy.conf
+++ b/etc/imageproxy.conf
@@ -9,7 +9,7 @@ respawn
 exec start-stop-daemon --start -c www-data --exec /usr/bin/imageproxy -- \
     -addr localhost:4593 \
     -log_dir /var/log/imageproxy \
-    -cacheDir /var/cache/imageproxy \
+    -cache /var/cache/imageproxy \
     -signatureKey @/etc/imageproxy.key \
     -baseURL https://willnorris.com/ \
     -whitelist willnorris.com,notsoserendipitous.com,gabenorris.com
