--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,12 @@
 language: go
 
 go:
-  - 1.8
+  - 1.x
+  - 1.8.x
 
 sudo: false
 
-install:
-  - mkdir -p "$GOPATH/src/willnorris.com/go"
-  - mv "$TRAVIS_BUILD_DIR" "$GOPATH/src/willnorris.com/go/imageproxy"
-  - go get -v -t -d willnorris.com/go/imageproxy/...
+go_import_path: willnorris.com/go/imageproxy
 
-script:
-  - go test -v $(go list willnorris.com/go/imageproxy/... | grep -v vendor)
+install:
+ - # skip go get, which ensures all dependencies are vendored
