--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,11 @@ build
 .goxc.local.json
 *.test
 
+vendor/**/.travis.yml
+vendor/**/.gitignore
+vendor/**/.goxc.json
 vendor/**/AUTHORS
 vendor/**/CONTRIBUTORS
 vendor/**/Makefile
+vendor/**/*_ZH.md
 vendor/**/*.sh
