--- a/etc/imageproxy.service
+++ b/etc/imageproxy.service
@@ -9,7 +9,7 @@ ExecStart=/usr/local/bin/imageproxy \
     -cache /var/cache/imageproxy \
     -signatureKey @/etc/imageproxy.key \
     -baseURL https://willnorris.com/ \
-    -remoteHosts willnorris.com,notsoserendipitous.com,gabenorris.com
+    -allowHosts willnorris.com,notsoserendipitous.com,gabenorris.com
 Restart=on-abort
 
 [Install]
