--- a/.travis.yml
+++ b/.travis.yml
@@ -14,3 +14,8 @@ cache:
 env:
   global:
     - GO111MODULE=on
+
+script:
+  - diff -u <(echo -n) <(gofmt -d -s .)
+  - go vet ./...
+  - go test -v ./...
