--- a/.travis.yml
+++ b/.travis.yml
@@ -18,4 +18,7 @@ env:
 script:
   - diff -u <(echo -n) <(gofmt -d -s .)
   - go vet ./...
-  - go test -v ./...
+  - go test -v -race -coverprofile=coverage.txt -covermode=atomic ./...
+
+after_success:
+    - bash <(curl -s https://codecov.io/bash)
