Increase memory request and limits
Following the discussion and write-up in https://threads.com/34367050458, this ups the memory request to better reflect reality as well as increasing the memory limit to provide more capacity for the image processing.

--- a/helm/safeimage.yaml
+++ b/helm/safeimage.yaml
@@ -26,10 +26,10 @@ extraMainContainerValues:
     timeoutSeconds: 1
 resources:
   requests:
-    memory: 250M
+    memory: 300M
     cpu: 100m
   limits:
-    memory: 500M
+    memory: 1G
     cpu: 400m
 extraSpecSpecs: {}
 healthcheck: # checkout https://github.com/bufferapp/EKG for complete docs
