--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,7 +7,7 @@ jobs:
   test:
     strategy:
       matrix:
-        go-version: [1.12.x, 1.13.x]
+        go-version: [1.x, 1.12.x]
         platform: [ubuntu-latest, windows-latest]
     runs-on: ${{ matrix.platform }}
 
@@ -18,12 +18,11 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Cache go modules
-      uses: actions/cache@v1.1.0
+      uses: actions/cache@v1
       with:
         path: ~/go/pkg/mod
         key: ${{ runner.os }}-go-${{ hashFiles('go.sum') }}
-        restore-keys: |
-          ${{ runner.os }}-go-
+        restore-keys: ${{ runner.os }}-go-
 
     - name: Run go fmt
       if: runner.os != 'Windows'
