--- a/helm/safeimage.yaml
+++ b/helm/safeimage.yaml
@@ -4,7 +4,7 @@ deploymentUrl: "safeimage.buffer.com"
 chart: "buffercharts/buffer-service"
 chartVersion: "1.0.2"
 cdEnabled: true
-cdBranchEnabled: false
+cdBranchEnabled: true
 dockerfile: Dockerfile
 channel: svc-images
 clusterName: "kubeeast"
