--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -36,5 +36,6 @@ jobs:
 
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1
+      timeout-minutes: 2
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
