--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,6 +18,11 @@ jobs:
           # least lets us know what go version should work.
           - go-version: 1.11
             platform: ubuntu-latest
+
+          # only update test coverage stats with most recent go version on linux
+          - go-version: 1.x
+            platform: ubuntu-latest
+            update-coverage: true
     runs-on: ${{ matrix.platform }}
 
     steps:
@@ -37,5 +42,6 @@ jobs:
         run: go test -v -race -coverprofile coverage.txt -covermode atomic ./...
 
       - name: Upload coverage to Codecov
+        if: ${{ matrix.update-coverage }}
         uses: codecov/codecov-action@v1
         timeout-minutes: 2
