--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,10 +26,12 @@ jobs:
     runs-on: ${{ matrix.platform }}
 
     steps:
+      - uses: actions/checkout@v2
+
       - uses: actions/setup-go@v1
         with:
           go-version: ${{ matrix.go-version }}
-      - uses: actions/checkout@v2
+      - run: go version
 
       - name: Cache go modules
         uses: actions/cache@v2
