--- a/.github/workflows/docker-tags.yml
+++ b/.github/workflows/docker-tags.yml
@@ -10,9 +10,20 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - uses: docker/build-push-action@v1
+
+    - uses: docker/login-action@v1
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-        repository: willnorris/imageproxy
-        tag_with_ref: true
+
+    - uses: docker/metadata-action@v3
+      id: meta
+      with:
+        images: willnorris/imageproxy
+
+    - uses: docker/build-push-action@v1
+      with:
+        context: .
+        push: true
+        tags: ${{ steps.meta.output.tags }}
+        labels: ${{ steps.meta.output.labels }}
