--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -2,10 +2,10 @@ name: Docker
 
 on:
   push:
-    branches: [ $default-branch ]
+    branches: [ $default-branch, 'main' ]
     tags: [ 'v*' ]
   pull_request:
-    branches: [ $default-branch ]
+    branches: [ $default-branch, 'main' ]
 
 
 env:
