ci: fix default branch name for workflow
The $default-branch variable is apparently only for workflow templates.

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -2,10 +2,10 @@ name: Docker
 
 on:
   push:
-    branches: [ $default-branch ]
+    branches: [ 'main' ]
     tags: [ 'v*' ]
   pull_request:
-    branches: [ $default-branch ]
+    branches: [ 'main' ]
 
 env:
   REGISTRY: ghcr.io
