--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,7 @@ on:
     types: [completed]
     branches: [main]
 
+
 concurrency:
   group: production
   cancel-in-progress: true
@@ -17,6 +18,6 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - uses: superfly/flyctl-actions/setup-flyctl@master
-    - run: flyctl -c etc/fly.toml deploy --remote-only
+    - run: flyctl -c etc/fly.toml deploy --local-only
       env:
         FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
