.github/workflows: update to actions/setup-go@v4

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,8 +15,8 @@ jobs:
       matrix:
         go-version:
           # support the two most recent major go versions
-          - 1.x
-          - 1.18.x
+          - stable
+          - oldstable
         platform: [ubuntu-latest]
         include:
           # minimum go version that works. This is not necessarily supported in
@@ -27,11 +27,11 @@ jobs:
 
           # include windows, but only with the latest Go version, since there
           # is very little in the library that is platform specific
-          - go-version: 1.x
+          - go-version: stable
             platform: windows-latest
 
           # only update test coverage stats with most recent go version on linux
-          - go-version: 1.x
+          - go-version: stable
             platform: ubuntu-latest
             update-coverage: true
     runs-on: ${{ matrix.platform }}
@@ -39,13 +39,12 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - uses: actions/setup-go@v3
+      - uses: actions/setup-go@v4
         with:
           go-version: ${{ matrix.go-version }}
-          cache: true
 
       - name: Run go test
-        run: go test -v -race -coverprofile coverage.txt -covermode atomic ./...
+        run: go test -v -race -coverprofile=coverage.txt -covermode=atomic ./...
 
       - name: Upload coverage to Codecov
         if: ${{ matrix.update-coverage }}
