[INF-4058] Added CircleCI configuration and docker-scout integration

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,4 +57,4 @@ workflows:
             - aws-oidc
             - docker-hub-creds-heyjobsci
           filters:
-            <<: *filter_docker_scout
+            <<: *filter_main
