--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -62,4 +62,6 @@ jobs:
         uses: sigstore/cosign-installer@59acb6260d9c0ba8f4a2f9d9b48431a222b68e20 #v3.5.0
       - name: Sign the published Docker image
         if: github.event_name == 'push'
+        env:
+          COSIGN_YES: "true"
         run: cosign sign ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}@${{ steps.build-and-push.outputs.digest }}
